--- a/packages/dartantic_chat/pubspec.yaml
+++ b/packages/dartantic_chat/pubspec.yaml
@@ -2,7 +2,7 @@ name: dartantic_chat
 description: >-
   AI chat widget for Flutter apps targeting mobile, desktop, and web supporting
   text, image, and voice input.
-version: 0.1.0
+version: 0.2.0
 repository: https://github.com/csells/dartantic/tree/main/packages/dartantic_chat
 resolution: workspace
 
@@ -29,6 +29,7 @@ dependencies:
   mac_menu_bar: ^0.0.1
   mime: ^2.0.0
   super_clipboard: ^0.9.1
+  super_drag_and_drop: ^0.9.1
   universal_platform: ^1.1.0
   url_launcher: ^6.3.2
   uuid: ^4.5.2
